cluster/apps/media-server/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media-server
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:5.27.5
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7878
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              memory: "128Mi"
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config-pvc
        - name: data
          persistentVolumeClaim:
            claimName: media-data-pvc
