cluster/apps/media-server/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media-server
spec:
  selector:
    app: radarr
  ports:
    - name: http
      port: 7878
      targetPort: 7878
